@@ -9,6 +9,9 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/110
+  Remove the already non functional remains of psyco support.
+
 - https://bitbucket.org/stackless-dev/stackless/issues/109
   The Stackless python*.dll no longer exports private symbols. Symbols
   required by Stackless-aware 3rd party extension modules should still be
